--- a/localisation/00_mmc.csv
+++ b/localisation/00_mmc.csv
@@ -17,3 +17,5 @@ TOOLTIP_MMC_convert_regular;[target_unmake_military.GetName] is converted to a r
 TOOLTIP_MMC_convert_military;[target_make_military.GetName] is converted to a military command.;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 TOOLTIP_MMC_unmake_military;Must be a temporary military command.;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
 TOOLTIP_MMC_make_military;Must not already be a military command.;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+title_mmc_marquis_dornish_marshes;Marquis;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
+title_mmc_marquis_dornish_marshes_desc;The Marquis is responsible for defending a realm's border provinces.;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
